[package]
name = "rustaigent"
version = "0.5.0"
edition = "2021"

[dependencies]
# Async runtime & HTTP
tokio = { version = "1.23", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"
dotenvy = "0.15"
anyhow = "1.0"
futures = "0.3"